ui and dto 1,2,4,6 working (4 without 3)